--- a/PiHome/project.properties
+++ b/PiHome/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=../../../Development/android-sdk-macosx/extras/android/support/v7/appcompat
+android.library.reference.1=..\\..\\..\\Development\\android-sdk-macosx\\extras\\android\\support\\v7\\appcompat
+android.library.reference.2=../../../../../Program Files (x86)/Android/android-sdk/extras/android/support/v7/appcompat
