--- a/PiHome/AndroidManifest.xml
+++ b/PiHome/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Summary"
+            android:label="@string/summary"
+            android:parentActivityName="com.example.pihome.MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+        	<meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.example.pihome.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
